--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece: The Pirate King</title>
-    <link rel="icon" type="image/jpg" href="/images/logo.png"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpg" href="images/logo.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="images/menu.jpg">
-
-    <div >
+    <div>
         <img class="titulo" src="images/titulo.png" alt="" width="500px" height="281px">
     </div>
-    
     <div class="boton">
-        <button class="boton_container"><a class="boton_container_start" href="./seleccion.html"><span class="boton_text">START</span></a> </button>
+        <button class="boton_container"><a class="boton_container_start" href="./seleccion.html"><span>START</span></a></button>
     </div>
-
     <audio autoplay loop> 
         <source src="music/we_are.mp3" type="audio/mp3">
     </audio>
-
     <script src="script.js"></script>
 </body>
 </html>
