--- a/seleccion.html
+++ b/seleccion.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/jpg" href="/images/logo.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="boton_seleccion">
-        <button class="boton_seleccion_container"><a class="boton_seleccion_container_start" href="./peleas.html"><span class="boton_seleccion_text">FIGHT</span></a></button>
+        <button class="boton_seleccion_container"><a class="boton_seleccion_container_start" href="./peleas.html"><span>FIGHT</span></a></button>
     </div>
 
     <audio autoplay loop> 
