--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece: The Pirate King</title>
-    <link rel="icon" type="image/jpg" href="images/logo.png"/>
+    <link rel="icon" href="images/logo.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
