--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="images/menu.jpg">
+<body class="inicio__body">
     <div>
         <img class="titulo" src="images/titulo.png" alt="" width="500px" height="281px">
     </div>
